--- a/wp-content/themes/basic/style.css
+++ b/wp-content/themes/basic/style.css
@@ -44,9 +44,10 @@ h4 {
 }
 
 
-a:hover {
+a:hover, a:focus {
 	text-decoration: none;
 }
+
 
 
 /* ----------------------------- HELPERS ----------------------------- */
@@ -64,6 +65,14 @@ a:hover {
 	margin: 20px 0px;
 	display: block;
 }
+
+
+.separator-line {
+	border-bottom: 1px #f37875 dotted;
+	margin: 10px 0px;
+	display: block;
+}
+
 
 
 .clear {
@@ -105,6 +114,16 @@ a:hover {
 }
 
 
+.note {
+	font-size: 0.9em;
+}
+
+
+.btn-primary {
+	background-color: #f37875;
+	border: 0;
+}
+
 
 
 /* ----------------------------- HEADER --------------------------- */
@@ -125,14 +144,41 @@ nav.navbar-default {
 	color: #f37875 !important;
 	font-weight: 300;
 	text-transform: uppercase;
+	border-bottom: 4px #f6efdd solid;
+	-webkit-transition: 0.2s;
+	-moz-transition: 0.2s;
+	transition: 0.2s;
 }
 
 
-.navbar-nav li.active a {
+.navbar-nav li.active a, .navbar-nav li:hover a {
 	font-weight: 400;
 	background-color: #f6efdd !important;
 	border-bottom: 4px #f37875 solid;
+	-webkit-transition: 0.2s;
+	-moz-transition: 0.2s;
+	transition: 0.2s;
 }
+
+
+.navbar-header button {
+	border: 0;
+	color: #f37875;
+	-webkit-transition: 1s;
+	-moz-transition: 1s;
+	transition: 1s;
+	font-size: 1em;
+}
+
+
+.navbar-header button:hover {
+	background: #f37875 !important;
+	color: #f6efdd;
+	-webkit-transition: 1s;
+	-moz-transition: 1s;
+	transition: 1s;
+}
+
 
 
 /* ----------------------------- INDEX ---------------------------- */
@@ -392,7 +438,7 @@ nav.navbar-default {
 }
 
 
-.contact a {
+.contact a, .popular-posts a{
 	color: #f37875;
 	font-weight: 400;
 }
@@ -405,6 +451,13 @@ nav.navbar-default {
 
 .about a:hover {
 	font-weight: 400;
+}
+
+
+#footer .glyphicon {
+	position: relative;
+	top: 2px;
+	padding-right: 5px;
 }
 
 
