--- a/wp-content/themes/basic/style.css
+++ b/wp-content/themes/basic/style.css
@@ -69,7 +69,7 @@ a:hover, a:focus {
 
 .separator-line {
 	border-bottom: 1px #f37875 dotted;
-	margin: 10px 0px;
+	margin: 15px 0px;
 	display: block;
 }
 
@@ -82,6 +82,7 @@ a:hover, a:focus {
 
 .gray {
 	color: #ccc;
+	text-transform: uppercase;
 }
 
 
@@ -125,6 +126,15 @@ a:hover, a:focus {
 }
 
 
+.ease-in-out {
+	-webkit-transition:all 0.25s ease-in-out;
+	-moz-transition:all 0.25s ease-in-out;
+	-o-transition:all 0.25s ease-in-out;
+	-ms-transition:all 0.25s ease-in-out;
+	transition:all 0.25s ease-in-out;
+}
+
+
 
 /* ----------------------------- HEADER --------------------------- */
 
@@ -137,6 +147,7 @@ a:hover, a:focus {
 
 nav.navbar-default {
 	background-color: #f6efdd;
+	z-index: 1;
 }
 
 
@@ -197,7 +208,7 @@ nav.navbar-default {
 
 
 .feat-image {
-	height: 300px;
+	height: 295px;
 	overflow: hidden;
 	margin: 0px;
 }
@@ -211,7 +222,6 @@ nav.navbar-default {
 }
 
 
-
 .feat-post li:hover img{
 	opacity: 1;
 	transform: scale(1.15,1.15);
@@ -221,13 +231,41 @@ nav.navbar-default {
 	-o-transform:scale(1.15,1.15);
 }
 
-
 .feat-post img {
 	-webkit-transition:all 0.25s ease-in-out;
 	-moz-transition:all 0.25s ease-in-out;
 	-o-transition:all 0.25s ease-in-out;
 	-ms-transition:all 0.25s ease-in-out;
 	transition:all 0.25s ease-in-out;
+}
+
+
+.feat-post .caption-overlay {
+	opacity: 1;
+	position: absolute;
+	top: 0px;
+	right: 30px;
+	text-align: center;
+	display: block;
+	height: 80px;
+	width: 90px;
+	background-color: #f6efdd;
+	overflow: hidden;
+	max-height: 0px;
+	transition: max-height 0.3s ease-in-out;
+}
+
+
+.feat-post li:hover .caption-overlay {
+	opacity: 1;
+	max-height: 50px;
+}
+
+
+.caption-overlay p {
+	text-transform: uppercase;
+	padding: 10px;
+	font-size: 1.2em;
 }
 
 
@@ -422,8 +460,7 @@ nav.navbar-default {
 .popular-posts ul li {
 	list-style-type: none;
 	padding: 0;
-	margin: 0;
-	height: 75px;
+	height: 80px;
 	overflow: hidden;
 }
 
